--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -201,13 +201,7 @@
                                         </div>
                                     </div>
                                     <div>
-
-                                        
                                         <button type='submit' id="details_tab" name='next' style="float:right;display:block;background:#00A4EF;border-radius:18px;color:white;font-size:20px;width:14%;height:7%;border-style:unset;">Run</button>
-
-
-
-
                                     </div>
                                 </div>
                                 </form>
@@ -215,22 +209,9 @@
                                 <button id="details_tab1" name='next' style="float:right;display:none;background:#00A4EF;border-radius:18px;color:white;font-size:20px;width:14%;height:7%;border-style:unset;" onclick="window.location.href= '/Home/ARMFn';">Next</button>
                             </div>
                         </div>
-                        <div class="tab-pane" id="description" style="display:none;">
-                            <div>
-                                <center>
-                                    <br />
-                                    <br />
-                                    <h3><b>Deployment Completed Successfully!!!</b></h3>
-                                    <h4><b>Resources are deployed in "ARM-DeployRG" Resource Group...</b></h4>
-                                    <i class="material-icons" style="font-size:100px;">
-                                        backup
-                                    </i>
-                                </center>
-                            </div>
-                            <div>
-                                <input type='button' name='home' value='Home' style="float:right;background:RGBA(56,96,178,1);padding:10px;border-radius:18px;color:white;width:14%;border-style:unset;" onclick="window.location.href= '/Home/Index';" />
-                            </div>
-                        </div>
+
+                        <div class="tab-pane" id="description" style="display:none;"></div>
+
                     </div>
                     <div class="wizard-footer">
                         <div class="pull-left">
