--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -141,14 +141,14 @@
                                             </div>
 
                                         </div>
-                                        <div class="col-sm-6" style="display: none;">
+                                        <div class="col-sm-6">
                                             <div class="input-group">
                                                 <span class="input-group-addon">
-                                                    <i class="material-icons dp48">dns</i>
+                                                    <i class="material-icons">vpn_key</i>
                                                 </span>
                                                 <div class="form-group label-floating">
-                                                    <label class="control-label">SQL Server Name</label>
-                                                    <input type="text" name="" class="form-control" required="">
+                                                    <label class="control-label">Subscription ID</label>
+                                                    <input type="password" name="subsid" id="subsid" class="form-control" required="">
                                                 </div>
                                             </div>
 
@@ -245,16 +245,17 @@
 
     $(document).ready(function () {
         $('#details_tab').attr('disabled', true);
-        $('#azuid,#pbid,#azpwd,#pbpwd,#dbsrc,#dbuid,#dbpwd').on('keyup', function () {
+        $('#azuid,#pbid,#azpwd,#pbpwd,#dbsrc,#subsid,#dbuid,#dbpwd').on('keyup', function () {
             var azuid = $("#azuid").val();
             var pbid = $("#pbid").val();
             var azpwd = $("#azpwd").val();
             var pbpwd = $("#pbpwd").val();
             var dbsrc = $("#dbsrc").val();
+            var subsid = $("#subsid").val();
             var dbuid = $("#dbuid").val();
             var dbpwd = $("#dbpwd").val();
 
-            if (azuid != "" && pbid != "" && azpwd != "" && pbpwd != "" && dbsrc != "" && dbuid != "" && dbpwd != "") {
+            if (azuid != "" && pbid != "" && azpwd != "" && pbpwd != "" && dbsrc != "" && subsid !="" && dbuid != "" && dbpwd != "") {
                 $('#details_tab').attr('disabled', false);
             } else {
                 $('#details_tab').attr('disabled', true);
