--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -137,7 +137,7 @@
                                                 <div class="form-group label-floating">
                                                     <label class="control-label">SQL Server Name</label>
                                 <input type="text" style="text-transform:lowercase" name="dbsrc" id="dbsrc" class="form-control" required="">
-                                                    <p id="error" style="color:red; font-size:11px; display:none;">Only allows AlphaNumeric Lowercase Value</p>
+                                                    <p id="error" style="color:red; font-size:11px; display:none;">Only allows Lowercase letters and numbers</p>
                                                 </div>
                                             </div>
 
