--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -149,7 +149,7 @@
                                                 </span>
                                                 <div class="form-group label-floating">
                                                     <label class="control-label">Subscription ID</label>
-                                                    <input type="password" name="subsid" id="subsid" class="form-control" required="">
+                                                    <input type="text" name="subsid" id="subsid" class="form-control" required="">
                                                 </div>
                                             </div>
 
